feat: Add system configuration page and models component
- Implemented ConfigPage component for managing system configurations including API endpoint, notifications, and theme settings.
- Created Models component to fetch and display available models from the API.
- Added NotFound component for handling 404 errors.
- Set up API end-to-end testing with Jest and SWC.
- Established API routes for chatbots and models with corresponding services for data handling.
- Integrated PostgreSQL for chatbot and model data storage.
- Developed utility functions for REST API interactions and Redux store management.
- Configured TypeScript and ESLint for improved code quality and maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,15 @@
     },
     {
       "path": "./apps/ai-coach"
+    },
+    {
+      "path": "./libs/utils"
+    },
+    {
+      "path": "./apps/api-e2e"
+    },
+    {
+      "path": "./apps/api"
     }
   ]
 }
