feat: Include app/config.json in TypeScript configuration for improved module resolution

--- a/apps/ai-coach/tsconfig.app.json
+++ b/apps/ai-coach/tsconfig.app.json
@@ -20,7 +20,8 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
+    "**/.client/**/*.tsx",
+    "app/config.json"
   ],
   "exclude": [
     "out-tsc",
