feat: Implement AI generation endpoint and integrate Ollama service for chatbot responses

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
+    "ollama": "^0.5.17",
     "pg": "^8.16.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
