--- a/apps/ai-coach/tsconfig.app.json
+++ b/apps/ai-coach/tsconfig.app.json
@@ -49,5 +49,10 @@
     "eslint.config.js",
     "eslint.config.cjs",
     "eslint.config.mjs"
+  ],
+  "references": [
+    {
+      "path": "../../libs/utils/tsconfig.lib.json"
+    }
   ]
 }
