feat: Add scrolling functionality to chat messages and integrate lucide icons

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
+    "lucide": "^0.539.0",
+    "lucide-react": "^0.539.0",
     "ollama": "^0.5.17",
     "pg": "^8.16.3",
     "react": "19.0.0",
