--- a/apps/ai-coach/tsconfig.app.json
+++ b/apps/ai-coach/tsconfig.app.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "../../", // Set to monorepo root to include all source files
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "types": ["@react-router/node", "vite/client", "node"],
     "esModuleInterop": true,
@@ -9,7 +10,6 @@
     "resolveJsonModule": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
-    "rootDir": "app",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": [
